# mesh_navigation_tutorials

./: .gitattributes  LICENSE  README.md  pyproject.toml  source_dependencies.yaml
mesh_navigation_ceres/: CMakeLists.txt  README.md  package.xml
mesh_navigation_ceres/config/: mbf_mesh_nav.yaml
mesh_navigation_ceres/launch/: mbf_mesh_navigation_server_launch.py  mesh_navigation_ceres_launch.py  rmcl_launch.py
mesh_navigation_ceres/maps/: README.md  agrotechnicum.ply  cic_outdoor.ply  fh_aachen.ply
mesh_navigation_ceres/rviz/: default.rviz
mesh_navigation_ceres_sim/: CMakeLists.txt  package.xml
mesh_navigation_ceres_sim/launch/: simulation_launch.py
mesh_navigation_ceres_sim/models/: README.md
mesh_navigation_ceres_sim/models/agrotechnicum/: model.config  model.sdf
mesh_navigation_ceres_sim/models/agrotechnicum/meshes/: agrotechnicum.dae
mesh_navigation_ceres_sim/models/cic_outdoor/: model.config  model.sdf
mesh_navigation_ceres_sim/models/cic_outdoor/meshes/: cic_outdoor.dae
mesh_navigation_ceres_sim/models/fh_aachen/: model.config  model.sdf
mesh_navigation_ceres_sim/worlds/: README.md  agrotechnicum.sdf  cic_outdoor.sdf  fh_aachen.sdf
mesh_navigation_pluto/: CMakeLists.txt  README.md  package.xml
mesh_navigation_pluto/config/: ekf.yaml  mbf_mesh_nav.yaml
mesh_navigation_pluto/launch/: mbf_mesh_navigation_server_launch.py  mesh_navigation_pluto_launch.py  rmcl_launch.py
mesh_navigation_pluto/maps/: botanical_garden_osnabrueck.ply  physics_campus_uos.ply  stone_quarry_brockum.ply
mesh_navigation_pluto/rviz/: default.rviz
mesh_navigation_pluto_sim/: CMakeLists.txt  package.xml
mesh_navigation_pluto_sim/hooks/: mesh_navigation_pluto_sim.dsv.in
mesh_navigation_pluto_sim/launch/: simulation_launch.py
mesh_navigation_pluto_sim/models/: README.md
mesh_navigation_pluto_sim/models/botanical_garden_osnabrueck/: model.config  model.sdf
mesh_navigation_pluto_sim/models/botanical_garden_osnabrueck/meshes/: botanical_garden_osnabrueck.dae
mesh_navigation_pluto_sim/models/physics_campus_uos/: model.config  model.sdf
mesh_navigation_pluto_sim/models/physics_campus_uos/meshes/: physics_campus_uos.dae
mesh_navigation_pluto_sim/models/stone_quarry_brockum/: model.config  model.sdf
mesh_navigation_pluto_sim/models/stone_quarry_brockum/meshes/: stone_quarry_brockum.dae
mesh_navigation_pluto_sim/worlds/: README.md  botanical_garden_osnabrueck.sdf  physics_campus_uos.sdf  stone_quarry_brockum.sdf
mesh_navigation_tutorials/: CMakeLists.txt  package.xml
mesh_navigation_tutorials/config/: mbf_mesh_nav.yaml  rmcl.yaml  rmcl_micpl.yaml
mesh_navigation_tutorials/launch/: mbf_mesh_navigation_server_launch.py  mesh_navigation_tutorial_launch.py  mesh_navigation_tutorials_launch.py  rmcl_launch.py  rmcl_micpl_launch.py
mesh_navigation_tutorials/maps/: floor_is_lava.dae  floor_is_lava.h5  floor_is_lava.ply  floor_is_lava_s3.dae  floor_is_lava_s3.h5  floor_is_lava_s3.ply  parking_garage.h5  parking_garage.ply  tray.dae  tray.h5  tray.ply  tray_s4.dae  tray_s4.h5  tray_s4.ply
mesh_navigation_tutorials/rviz/: default.rviz
mesh_navigation_tutorials_sim/: CMakeLists.txt  package.xml
mesh_navigation_tutorials_sim/config/: ros_gazebo_bridge.yaml
mesh_navigation_tutorials_sim/hooks/: mesh_navigation_tutorials_sim.sh.in
mesh_navigation_tutorials_sim/launch/: base_simulation_launch.py  simulation_launch.py
mesh_navigation_tutorials_sim/models/floor_is_lava/: model.config  model.sdf
mesh_navigation_tutorials_sim/models/floor_is_lava/meshes/: floor_is_lava.dae  floor_is_lava.ply
mesh_navigation_tutorials_sim/models/parking_garage/: model.config  model.sdf
mesh_navigation_tutorials_sim/models/parking_garage/meshes/: parking_garage.dae  parking_garage_flipped.dae
mesh_navigation_tutorials_sim/models/tray/: model.config  model.sdf
mesh_navigation_tutorials_sim/models/tray/meshes/: tray.ply
mesh_navigation_tutorials_sim/src/: ground_truth_localization.cpp
mesh_navigation_tutorials_sim/urdf/: ceres.urdf.xacro  wheel.urdf.xacro
mesh_navigation_tutorials_sim/worlds/: floor_is_lava.sdf  parking_garage.sdf  tray.sdf
